--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "yogcloud/hyperf-tcc",
+    "name": "wangrunxinyes/hyperf-tcc",
     "description": "基于Hyperf框架的TCC分布式事务组件",
     "authors": [
         {
